[package]
name = "lr1120-apps"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
lr1120 = {version = "0.4.0", features=["defmt"]}

embassy-stm32 = { version = "0.4.0", features = [ "defmt", "unstable-pac", "stm32l476rg", "memory-x", "time-driver-any", "exti", "chrono", "dual-bank"]  }
embassy-sync = { version = "0.7.0", features = ["defmt"] }
embassy-executor = { version = "0.9.0", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768", ] }
embassy-embedded-hal = { version = "0.5.0" }
embassy-usb = { version = "0.5.0", features = ["defmt"] }
embassy-net-adin1110 = { version = "0.3.0"}
embassy-net = { version = "0.7.0", features = ["defmt",  "udp", "tcp", "dhcpv4", "medium-ethernet"] }
embassy-futures = { version = "0.1.0" }
embedded-io-async = { version = "0.7.0", features = ["defmt"] }
embedded-io = { version = "0.7.0", features = ["defmt"] }

defmt = "1.0.1"
defmt-rtt = "1.0.0"

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "1.0.0"
embedded-hal-async = { version = "1.0" }
embedded-hal-bus = { version = "0.3", features = ["async"] }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
heapless = { version = "^0.9", default-features = false }
chrono = { version = "^0.4", default-features = false }
static_cell = "2"

micromath = "2.0.0"

[patch.crates-io]
lr1120 = {version = "0.4.0", path = '../lr1120-driver' }

# Disable test when running all target to avoid issue with rust-analyzer
[lib]
test = false
doctest = false
bench = false

[[bin]]
name = "get_temp"
test = false
doctest = false
bench = false
